syntax = "proto3";
import "google/protobuf/any.proto";

package ElVis.Serialization;

message RenderModule {
  bool enabled = 1;
  google.protobuf.Any concrete_module = 2;
}
